Set java.version to 17