@@ -20,7 +20,7 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <java.version>18</java.version>
+        <java.version>17</java.version>
         <testcontainers.version>1.17.2</testcontainers.version>
         <kotlin.jvmTarget>18</kotlin.jvmTarget>
         <java.xml.bind.version>2.3.1</java.xml.bind.version>
@@ -394,10 +394,12 @@
                 <configuration>
                     <source>${java.version}</source>
                     <target>${java.version}</target>
+<!--
                     <compilerArgs>
-                        <arg>--enable-preview</arg>
+                        <arg>&#45;&#45;enable-preview</arg>
                         <arg>-Xlint:preview</arg>
                     </compilerArgs>
+-->
                 </configuration>
                 <executions>
                     <execution>
